# HelloWorld

./: CMakeLists.txt
include/: hello.h
lib/: CMakeLists.txt  libHello.cpp
src/: CMakeLists.txt  hello.cpp  main.cpp
